apps/staging/tududi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tududi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tududi.christophervestman.com
      secretName: tududi-tls
  rules:
    - host: tududi.christophervestman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tududi
                port:
                  number: 3002
